duniverse/menhirLib.20200211/test/static/bad/invalid-point-free-action.mly
%token FOO BAR
%start<unit> main

%%

let main :=
  ~ = FOO; ~ = BAR; <()>
