duniverse/menhirLib.20200211/test/static/bad/invalid-point-free-action.exp
File "invalid-point-free-action.mly", line 7, characters 20-24:
Error: A point-free semantic action must consist of a single OCaml identifier.
